--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat+Sans');
+
 .App {
   width: 100%;
   height: 100%;
+}
+
+.section {
+  padding-right: 0.5rem;
+  color: #f2f2f2;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.section:hover,
+.active {
+  font-weight: bold;
 }
